minor spacing fix

--- a/src/assets/styling/_item.scss
+++ b/src/assets/styling/_item.scss
@@ -483,8 +483,8 @@
                     img {
                         height: 200px;
                         margin: auto;
-                        padding-top: 57px;
-                        padding-bottom: 46px;
+                        padding-top: 70px;
+                        padding-bottom: 33px;
                     }
                 }
 
